# evolutionary-computing

./: .gitignore  README.md  Reporter.py  benchmark.py  best_fitness.py  distances.csv  distances_visual.py  exact.py  histogram.py  hyper_search.xlsx  plot_function.py  pyproject.toml  r0758170.csv  r0758170.py  results.md  run_algorithim.py  run_algorithm.py  test_r0758170.py  testing.py  tour100.csv  tour200 latest results.csv  tour200.csv  visualize.py
benchmark/: benchmark_001.csv  benchmark_002.csv  benchmark_003.csv  benchmark_004.csv  benchmark_005.csv  benchmark_tour1000_001.csv  benchmark_tour1000_002.csv  benchmark_tour1000_003.csv  benchmark_tour1000_004.csv  benchmark_tour1000_005.csv  benchmark_tour1000_006.csv  benchmark_tour1000_007.csv  benchmark_tour1000_008.csv  benchmark_tour1000_009.csv  benchmark_tour1000_010.csv  benchmark_tour1000_011.csv  benchmark_tour1000_012.csv  benchmark_tour1000_013.csv  benchmark_tour1000_014.csv  benchmark_tour1000_015.csv  benchmark_tour1000_016.csv  benchmark_tour1000_017.csv  benchmark_tour1000_018.csv  benchmark_tour1000_019.csv  benchmark_tour1000_020.csv  benchmark_tour100_001.csv  benchmark_tour100_002.csv  benchmark_tour100_003.csv  benchmark_tour100_004.csv  benchmark_tour100_005.csv  benchmark_tour100_006.csv  benchmark_tour100_007.csv  benchmark_tour100_008.csv  benchmark_tour100_009.csv  benchmark_tour100_010.csv  benchmark_tour100_011.csv  benchmark_tour100_013.csv  benchmark_tour100_014.csv  benchmark_tour100_015.csv  benchmark_tour100_016.csv  (+125 more)
best/: benchmark_tour100_012.csv
(+3 files in other folders)
