[tool.poetry]
name = "evolutionary-computing"
version = "0.1.0"
description = ""
authors = ["William Dumez <william.dumez@skynet.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
